<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_gray">Gray</string>
    <string name="color_green">Green</string>
    <string name="color_navy">Navy</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>

    <!-- TODO: translations-->
    <string name="app_name">Digilogue</string>
    <string name="digital_config_background">Background</string>
    <string name="digital_config_middle">Middle</string>
    <string name="digital_config_foreground">Foreground</string>
    <string name="digital_config_accent">Accent</string>
    <string name="digital_config_format">AM/PM</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="widget_weather_auto_location">Auto detect location</string>
    <string name="location_hint">City, Country (Eg. Cape Town, ZA)</string>
    <!--<string name="widget_weather_frequency">Update weather every %02d hours</string>-->
    <string name="weather_api_credit">Weather by World Weather Online</string>
    <string name="play_store_description_instruction">View <a href="https://docs.google.com/document/d/1JA3BDl4EG9pFGEngkfHiv5ZhXnh9Ii2LrI_Kii8mpDQ/edit?usp=sharing">this Google Doc</a> for manual location options.</string>
    <string name="weather_icon_help">View the different <a href="https://lh5.ggpht.com/64ItqnImwa3RMzHPzm7roQsPmEATr44Gt9Hx0Du4lumLLDVM1ZKHB7tgqzR8oPBlhMg=h3000">weather icons here</a></string>
    <string name="weather_data_info">Weather data will be displayed here once fetched.</string>
    <string name="degrees">°</string>
    <string name="title_no_device_connected">No wearable device is currently connected.</string>
    <string name="ok_no_device_connected">OK</string>
    <string name="last_time_updated">"Last time updated: "</string>
    <string name="next_update">"Next update at: "</string>
    <string name="time_format">%Y-%m-%d %H:%M:%S</string>
    <string name="condition">"Condition: "</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="location">"Location: "</string>
    <string name="clear">Clear</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="mist">Mist/Fog</string>
    <string name="patchy_rain">Patchy Rain</string>
    <string name="patchy_snow">Patchy Snow</string>
    <string name="patchy_sleet">Patchy Sleet</string>
    <string name="thundery_outbreaks">Thundery Outbreaks</string>
    <string name="blowing_snow">Blowing Snow</string>
    <string name="blizzard">Blizzard</string>
    <string name="light_drizzle">Light Drizzle</string>
    <string name="moderate_rain_at_times">Moderate Rain at times</string>
    <string name="moderate_rain">Moderate Rain</string>
    <string name="patchy_light_snow">Patchy Light Snow</string>
    <string name="patchy_heavy_snow">Patchy Heavy Snow</string>
    <string name="moderate_rain_with_thunder">Moderate or Heavy Rain with Thunder</string>
    <string name="unknown">Unknown</string>
    <string name="toggle_dim">Dim colour for ambient mode</string>
    <string name="toggle_solid_number">Solid text in ambient mode</string>
    <string name="toggle_battery">Battery</string>
    <string name="toggle_digital">Digital</string>
    <string name="toggle_analogue">Analogue</string>
    <string name="toggle_date_day">Day, Date</string>
    <string name="moto_mode">Moto 360 compatibility</string>
    <string name="toggle_dial">Dial numbers</string>
    <string name="preview_tap">Tap on the preview to toggle Ambient Mode</string>
    <string name="reset_defaults">Reset defaults</string>
    <string name="save">Save</string>
    <string name="colour_title">Colours</string>
    <string name="toggles_title">Options</string>
    <string name="weather_title">Weather</string>
    <string name="settings_title">Settings</string>
    <string name="warning"><b>Warning:</b> changing the options below could possibly cause screen burn-in. Change them at your own risk.</string>
    <string name="analogue_size">Analogue line width: %d%%</string>
    <string name="digital_size">Digital Size: %d%%</string>
    <string name="ambient_ticks">Ambient hour ticks</string>

    <string-array name="color_array">
        <item>@string/color_black</item>
        <item>@string/color_blue</item>
        <item>@string/color_gray</item>
        <item>@string/color_green</item>
        <item>@string/color_navy</item>
        <item>@string/color_red</item>
        <item>@string/color_white</item>
    </string-array>

    <string-array name="tab_array">
        <item>@string/colour_title</item>
        <item>@string/toggles_title</item>
        <item>@string/weather_title</item>
    </string-array>

</resources>
