<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenman.digilogue.WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <CheckBox
                android:id="@+id/toggle_weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/weather_api_credit" />

            <CheckBox
                android:id="@+id/widget_weather_fahrenheit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/fahrenheit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <CheckBox
                android:id="@+id/widget_weather_auto_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/widget_weather_auto_location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/widget_weather_text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint"
                android:inputType="text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/weather_help_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_store_description_instruction" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weather_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/widget_weather_text_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/weather_data_info" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>